# fuzzydtree

./: .gitignore  LICENSE  README.md  classifier_demo.ipynb  pyproject.toml  regressor_demo.ipynb  setup.py  test_fuzzydecisiontree.py
.github/workflows/: pages.yml
docs/: .nojekyll  generate_charts.py  index.html
fuzzydtree/: __init__.py  _c_backend.c  _tree.py  boosting.py  classifier.py  forest.py  regressor.py
